--- a/exploration5.ipynb
+++ b/exploration5.ipynb
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1acec86",
+   "id": "8b5dd543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,6 +652,16 @@
     "validation_losses = []\n",
     "preview_index = random.choice(range(len(dataset_valid)))\n",
     "best_validation_loss = 99999;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48e35f98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1-best_validation_loss"
    ]
   },
   {
@@ -731,7 +741,7 @@
     "print(data_item_index)\n",
     "data_item = dataset_valid[data_item_index]\n",
     "with torch.no_grad():\n",
-    "    preview_seg_net(data_item, show_heatmap=True);"
+    "    preview_seg_net(data_item, show_heatmap=False, show_bdry=True);"
    ]
   },
   {
