add post processing of lung segmentations
now we separate left vs right lung in post processing, allowing us
to mix datasets that don't make the distinction.

also, we use itk algorithms to ensure that each lung region is
a single simply connection domain.

--- a/exploration5.ipynb
+++ b/exploration5.ipynb
@@ -210,6 +210,7 @@
     "import numpy as np\n",
     "import torch\n",
     "from util import UnionMasksD, rgb_to_grayscale, list_data_collate_no_meta\n",
+    "from segmentation_post_processing import SegmentationPostProcessing\n",
     "\n",
     "monai.utils.misc.set_determinism(seed=9274)"
    ]
@@ -528,7 +529,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preview_seg_net(data_item, figsize=(15,10), print_loss = True, show_heatmap = False, show_bdry=False):\n",
+    "def preview_seg_net(data_item, figsize=(15,10), print_loss = True, show_heatmap = False, show_bdry=False, show_post_processing=0):\n",
+    "    \"\"\"\n",
+    "    Preview seg net prediciton\n",
+    "    \n",
+    "    Args:\n",
+    "        data_item: A data item to input into seg_net.\n",
+    "        figsize: figure size to be used at each matplotlib plotting call\n",
+    "        print_loss: show Dice loss\n",
+    "        show_heatmap: whether to show class probability image\n",
+    "        show_bdry: whether to draw the boundry\n",
+    "        show_post_processing: 0 to not show it,\n",
+    "            1 to show post processed result,\n",
+    "            2 to show post processed result and intermediate steps\n",
+    "    \"\"\"\n",
     "    \n",
     "    seg_net.eval()\n",
     "    \n",
@@ -536,7 +550,7 @@
     "        im_device = data_item['img'].to(next(seg_net.parameters()).device.type)\n",
     "        seg_pred = seg_net(im_device.unsqueeze(0))[0].cpu()\n",
     "        _, max_indices = seg_pred.max(dim=0)\n",
-    "        seg_pred_mask = (max_indices==1).type(torch.int8)\n",
+    "        seg_pred_mask = (max_indices==1).type(torch.uint8)\n",
     "\n",
     "        f, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=figsize)\n",
     "\n",
@@ -578,6 +592,28 @@
     "            ax1.axis('off')\n",
     "            print(\"predicted seg class probability maps:\")\n",
     "            plt.show()\n",
+    "        \n",
+    "        if show_post_processing!=0:\n",
+    "            plt.figure(figsize = figsize)\n",
+    "            seg_post_process = SegmentationPostProcessing()\n",
+    "            seg_pred_processed = seg_post_process(seg_pred_mask)\n",
+    "            im_pred = im.clone()\n",
+    "            im_pred[1,:,:] *= 1-0.4*(seg_pred_processed==1)\n",
+    "            im_pred[0,:,:] *= 1-0.4*(seg_pred_processed==2)\n",
+    "            if show_bdry:\n",
+    "                seg_pred_bdry1 = bdry(seg_pred_processed==1)\n",
+    "                seg_pred_bdry2 = bdry(seg_pred_processed==2)\n",
+    "                mask1 = (seg_pred_bdry1 == 1.)\n",
+    "                mask2 = (seg_pred_bdry2 == 1.)\n",
+    "                im_pred[0,mask1], im_pred[1,mask1], im_pred[2,mask1] = 1,0,0 # R, G, B\n",
+    "                im_pred[0,mask2], im_pred[1,mask2], im_pred[2,mask2] = 0,1,0 # R, G, B\n",
+    "            im_pred = np.transpose(im_pred,axes=(1,2,0))\n",
+    "            plt.imshow(im_pred, cmap='bone')\n",
+    "            plt.title(\"post-processed segmentation overlay\")\n",
+    "            plt.axis('off')\n",
+    "            plt.show()\n",
+    "            if show_post_processing>1:\n",
+    "                seg_post_process.preview_intermediate_steps()\n",
     "\n",
     "        if print_loss:\n",
     "            loss = dice_loss(\n",
@@ -597,7 +633,7 @@
    "outputs": [],
    "source": [
     "# Try seg_net on a random image.\n",
-    "preview_seg_net(random.choice(dataset_train), show_heatmap=True);"
+    "preview_seg_net(random.choice(dataset_train), show_bdry=True);"
    ]
   },
   {
@@ -622,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b5dd543",
+   "id": "e5bb2969",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,19 +693,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48e35f98",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1-best_validation_loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "dd57875d",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -741,7 +767,7 @@
     "print(data_item_index)\n",
     "data_item = dataset_valid[data_item_index]\n",
     "with torch.no_grad():\n",
-    "    preview_seg_net(data_item, show_heatmap=False, show_bdry=True);"
+    "    preview_seg_net(data_item, show_heatmap=False, show_bdry=True, show_post_processing=1);"
    ]
   },
   {
@@ -751,7 +777,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = '0015'\n",
+    "run_id = '0016'\n",
     "if (os.path.exists(f'seg_net{run_id}.pth')):\n",
     "    del run_id\n",
     "    raise Exception(\"Please change run_id so you don't overwrite things.\")"
