--- a/exploration6.ipynb
+++ b/exploration6.ipynb
@@ -5,6 +5,10 @@
    "id": "9caddba5",
    "metadata": {},
    "source": [
+    "exploration6 changes:\n",
+    "changing the way model is saved and loaded; now saving and loading more complete information for a training checkpt.\n",
+    "\n",
+    "exploration5 changes:\n",
     "Similar to exploration2, but this time including an addition dataset (Shenzhen) and not separating between right and left lung.\n",
     "\n",
     "Also, started to include segmentation preprocessing here."
@@ -665,8 +669,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seg_net.to('cuda')\n",
-    "\n",
     "dataloader_train = monai.data.DataLoader(\n",
     "    dataset_train,\n",
     "    batch_size=16,\n",
@@ -690,7 +692,8 @@
     "training_losses = [] \n",
     "validation_losses = []\n",
     "preview_index = random.choice(range(len(dataset_valid)))\n",
-    "best_validation_loss = 99999;"
+    "best_validation_loss = 99999\n",
+    "best_validation_epoch = -1"
    ]
   },
   {
@@ -698,16 +701,23 @@
    "execution_count": null,
    "id": "dd57875d",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "max_epochs = 60\n",
+    "max_epochs = 80\n",
+    "\n",
+    "seg_net.to('cuda')\n",
+    "\n",
+    "validate_every = 5\n",
+    "# shift things to always validate on last epoch\n",
+    "validate_this_epoch = lambda epoch_number : epoch_number%validate_every==(max_epochs-1)%validate_every\n",
+    "\n",
     "while epoch_number < max_epochs:\n",
     "    \n",
     "    print(f\"Epoch {epoch_number+1}/{max_epochs} ...\")\n",
     "    \n",
-    "    if (epoch_number%5==0):\n",
+    "    if validate_this_epoch(epoch_number):\n",
     "        preview_seg_net(dataset_valid[preview_index], figsize=(6,6), print_score=False);\n",
     "    \n",
     "    seg_net.train()\n",
@@ -729,7 +739,7 @@
     "    \n",
     "    print(f\"\\ttraining loss: {training_loss}\")\n",
     "\n",
-    "    if (epoch_number%5==0):\n",
+    "    if validate_this_epoch(epoch_number):\n",
     "    \n",
     "        seg_net.eval()\n",
     "        losses = []\n",
@@ -749,11 +759,40 @@
     "        if validation_loss < best_validation_loss:\n",
     "            best_validation_loss = validation_loss\n",
     "            torch.save(seg_net.state_dict(),f'seg_net_bestval.pth')\n",
+    "            best_validation_epoch = epoch_number\n",
     "    \n",
     "    epoch_number +=1\n",
     "\n",
     "del imgs, true_segs, predicted_segs, loss\n",
-    "torch.cuda.empty_cache()"
+    "torch.cuda.empty_cache()\n",
+    "\n",
+    "seg_net.load_state_dict(torch.load(f'seg_net_bestval.pth'))\n",
+    "print(f\"Loaded model state during the best validation score, which was during epoch {best_validation_epoch}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f1951a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CHECKPOINT CELL; LOAD\n",
+    "\n",
+    "# run_id_load = '0017'\n",
+    "# load_path = f'model{run_id_load}.pth'\n",
+    "\n",
+    "# model_dict = torch.load(load_path)\n",
+    "\n",
+    "# seg_net = model_dict['model']\n",
+    "# learning_rate = model_dict['learning_rate']\n",
+    "# optimizer = torch.optim.Adam(seg_net.parameters(), learning_rate)\n",
+    "# optimizer.load_state_dict(model_dict['optimizer_state_dict'])\n",
+    "# training_losses = model_dict['training_losses']\n",
+    "# validation_losses = model_dict['validation_losses']\n",
+    "# epoch_number = model_dict['epoch_number']\n",
+    "# best_validation_loss = model_dict['best_validation_loss']\n",
+    "# best_validation_epoch = model_dict['best_validation_epoch']"
    ]
   },
   {
@@ -767,7 +806,7 @@
    "source": [
     "#Try on a random validation image\n",
     "data_item_index = random.choice(range(len(dataset_valid)))\n",
-    "# data_item_index = 13\n",
+    "# data_item_index = 66\n",
     "print(data_item_index, data_item['id'])\n",
     "data_item = dataset_valid[data_item_index]\n",
     "with torch.no_grad():\n",
@@ -782,41 +821,35 @@
    "outputs": [],
    "source": [
     "run_id = '0017'\n",
-    "if (os.path.exists(f'seg_net{run_id}.pth')):\n",
-    "    del run_id\n",
+    "save_path = f'model{run_id}.pth'\n",
+    "if (os.path.exists(save_path)):\n",
+    "    del run_id, save_path\n",
     "    raise Exception(\"Please change run_id so you don't overwrite things.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4d88987",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# CHECKPOINT CELL; LOAD\n",
-    "# seg_net.load_state_dict(torch.load(f'seg_net_bestval.pth'))\n",
-    "# seg_net.load_state_dict(torch.load(f'seg_net{run_id}.pth'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26a15484",
-   "metadata": {},
-   "source": [
-    "TODO: Switch to saving/loading a dict of all the relevant things for a checkpoint, [as shown here](https://pytorch.org/tutorials/beginner/saving_loading_models.html#saving-loading-a-general-checkpoint-for-inference-and-or-resuming-training). Include also the model architecture, so that the same saved object can be loaded in a slicer script"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1d86104",
+   "id": "c3c2753d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# CHECKPOINT CELL; SAVE\n",
-    "torch.save(seg_net.state_dict(),f'seg_net{run_id}.pth') # Save parameters dict\n",
-    "torch.save(seg_net,f'seg_net_model{run_id}.pth') # Save entire model, e.g. for loading in Slicer script"
+    "torch.save(\n",
+    "    {\n",
+    "        'model': seg_net.cpu(),\n",
+    "        'optimizer_state_dict': optimizer.state_dict(),\n",
+    "        'learning_rate': learning_rate,\n",
+    "        'training_losses': training_losses,\n",
+    "        'validation_losses': validation_losses,\n",
+    "        'transform_train' : transform_train,\n",
+    "        'transform_valid' : transform_valid,\n",
+    "        'epoch_number': epoch_number,\n",
+    "        'best_validation_loss': best_validation_loss,\n",
+    "        'best_validation_epoch': best_validation_epoch,\n",
+    "    }, \n",
+    "    save_path\n",
+    ")"
    ]
   },
   {
@@ -843,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d52ddcc6",
+   "id": "3cfb6c87",
    "metadata": {},
    "outputs": [],
    "source": [
