add random blob dropout augmentation

--- a/exploration6.ipynb
+++ b/exploration6.ipynb
@@ -9,7 +9,7 @@
     "changing the way model is saved and loaded; now saving and loading more complete information for a training checkpt.\n",
     "\n",
     "exploration5 changes:\n",
-    "Similar to exploration2, but this time including an addition dataset (Shenzhen) and not separating between right and left lung.\n",
+    "Similar to exploration2, but this time including an additional dataset (Shenzhen) and not separating between right and left lung.\n",
     "\n",
     "Also, started to include segmentation preprocessing here."
    ]
@@ -215,10 +215,19 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import torch\n",
-    "from util import UnionMasksD, rgb_to_grayscale, list_data_collate_no_meta\n",
     "from segmentation_post_processing import SegmentationPostProcessing\n",
     "\n",
     "monai.utils.misc.set_determinism(seed=9274)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daeebe67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from segmentation_model_lib import *"
    ]
   },
   {
@@ -233,6 +242,76 @@
     "    classes = list(map(lambda d : str(d['tuberculosis'])+d['source'], data)),\n",
     "    ratios = (8,2)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d88bd527",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a custom transform that drops out blob shapes of random values sampled from the image value\n",
+    "\n",
+    "def blobbed(img, R):\n",
+    "    \"\"\"Add a random metaball blob to an image, using the random state R\"\"\"\n",
+    "    img_max = img.max()\n",
+    "    val = R.uniform(max(img.min(),img_max/2),img_max)\n",
+    "    number_of_metaballs = R.randint(10,11)\n",
+    "    \n",
+    "    metaball_radius_mean = img.shape[2]/16\n",
+    "    metaball_radius_std = img.shape[2]/32\n",
+    "    \n",
+    "    metaball_radii = R.normal(metaball_radius_mean, scale = metaball_radius_std, size = number_of_metaballs)\n",
+    "\n",
+    "    blob_center_y = R.uniform(0,img.shape[1])\n",
+    "    blob_center_x = R.uniform(0,img.shape[2])\n",
+    "    blob_std_y = img.shape[2]/8\n",
+    "    blob_std_x = img.shape[1]/8\n",
+    "    \n",
+    "    metaball_y_locations = R.normal(blob_center_y, scale = blob_std_y, size = number_of_metaballs)\n",
+    "    metaball_x_locations = R.normal(blob_center_x, scale = blob_std_x, size = number_of_metaballs)\n",
+    "    \n",
+    "    y, x = np.ogrid[tuple(slice(0, i) for i in img.shape[1:])]\n",
+    "    mask = sum(\n",
+    "        r**2 / ((y-y_loc)**2 + (x-x_loc)**2)\n",
+    "        for r, y_loc, x_loc in zip(metaball_radii, metaball_y_locations, metaball_x_locations)\n",
+    "    ) > 1\n",
+    "    img[0][mask]=val\n",
+    "    \n",
+    "    return img\n",
+    "\n",
+    "\n",
+    "from typing import Any, Callable, List, Optional, Sequence, Tuple, Union\n",
+    "from monai.transforms.transform import MapTransform, RandomizableTransform\n",
+    "from monai.config import DtypeLike, KeysCollection\n",
+    "\n",
+    "class RandBlobDropoutD(RandomizableTransform, MapTransform):\n",
+    "    \"\"\"\n",
+    "    Bleh.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    backend = [monai.utils.enums.TransformBackends.NUMPY]\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        keys: KeysCollection,\n",
+    "        prob: float = 0.1,\n",
+    "        allow_missing_keys: bool = False,\n",
+    "    ):\n",
+    "        MapTransform.__init__(self, keys, allow_missing_keys)\n",
+    "        RandomizableTransform.__init__(self, prob=prob)\n",
+    "\n",
+    "    def __call__(self, data):\n",
+    "        d = dict(data)\n",
+    "        self.randomize(None)\n",
+    "        if not self._do_transform:\n",
+    "            return d\n",
+    "        \n",
+    "        for key in self.key_iterator(d):\n",
+    "            d[key] = blobbed(d[key], self.R)\n",
+    "\n",
+    "        return d"
    ]
   },
   {
@@ -259,34 +338,22 @@
     "    monai.transforms.ResizeD(\n",
     "        keys = ['img', 'seg'],\n",
     "        spatial_size=(image_size,image_size),\n",
-    "        mode = ['bilinear', 'nearest']\n",
+    "        mode = ['bilinear', 'nearest'],\n",
+    "        align_corners = [False, None]\n",
     "    ),\n",
     "    monai.transforms.ToTensorD(keys = ['img', 'seg']),\n",
     "])\n",
     "\n",
     "transform_train = monai.transforms.Compose([\n",
     "    transform_valid,\n",
-    "    monai.transforms.RandCoarseDropoutd(\n",
+    "    RandBlobDropoutD(\n",
     "        keys = ['img'],\n",
-    "        holes = 1,\n",
-    "        max_holes=3,\n",
-    "        spatial_size=image_size//8,\n",
-    "        max_spatial_size=image_size//2,\n",
     "        prob=1,\n",
-    "        fill_value=255\n",
-    "    ),\n",
-    "    monai.transforms.RandCoarseDropoutd(\n",
-    "        keys = ['img'],\n",
-    "        holes = 1,\n",
-    "        max_holes=3,\n",
-    "        spatial_size=image_size//32,\n",
-    "        max_spatial_size=image_size//4,\n",
-    "        prob=0,\n",
-    "        fill_value=0\n",
     "    ),\n",
     "    monai.transforms.RandZoomD(\n",
     "        keys = ['img', 'seg'],\n",
     "        mode = ['bilinear', 'nearest'],\n",
+    "        align_corners = [False, None],\n",
     "        prob=1.,\n",
     "        padding_mode=\"constant\",\n",
     "        min_zoom = 0.7,\n",
@@ -295,6 +362,7 @@
     "    monai.transforms.RandRotateD(\n",
     "        keys = ['img', 'seg'],\n",
     "        mode = ['bilinear', 'nearest'],\n",
+    "        align_corners = [False, None],\n",
     "        prob=1.,\n",
     "        range_x = np.pi/8,\n",
     "        padding_mode=\"zeros\",\n",
@@ -792,7 +860,10 @@
     "# validation_losses = model_dict['validation_losses']\n",
     "# epoch_number = model_dict['epoch_number']\n",
     "# best_validation_loss = model_dict['best_validation_loss']\n",
-    "# best_validation_epoch = model_dict['best_validation_epoch']"
+    "# best_validation_epoch = model_dict['best_validation_epoch']\n",
+    "# transform_train = model_dict['transform_train']\n",
+    "# transform_valid = model_dict['transform_valid']\n",
+    "# image_size = model_dict['image_size']"
    ]
   },
   {
@@ -806,7 +877,7 @@
    "source": [
     "#Try on a random validation image\n",
     "data_item_index = random.choice(range(len(dataset_valid)))\n",
-    "# data_item_index = 66\n",
+    "# data_item_index = 90\n",
     "print(data_item_index, data_item['id'])\n",
     "data_item = dataset_valid[data_item_index]\n",
     "with torch.no_grad():\n",
@@ -820,7 +891,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = '0017'\n",
+    "run_id = '0019'\n",
     "save_path = f'model{run_id}.pth'\n",
     "if (os.path.exists(save_path)):\n",
     "    del run_id, save_path\n",
@@ -835,6 +906,9 @@
    "outputs": [],
    "source": [
     "# CHECKPOINT CELL; SAVE\n",
+    "\n",
+    "# TODO: currently saving the transform causes pickling enironment difficulties when trying to unpickle elsewhere\n",
+    "# need to find a better way to \"include\" the environment.\n",
     "torch.save(\n",
     "    {\n",
     "        'model': seg_net.cpu(),\n",
@@ -842,11 +916,12 @@
     "        'learning_rate': learning_rate,\n",
     "        'training_losses': training_losses,\n",
     "        'validation_losses': validation_losses,\n",
-    "        'transform_train' : transform_train,\n",
-    "        'transform_valid' : transform_valid,\n",
+    "#         'transform_train' : transform_train,\n",
+    "#         'transform_valid' : transform_valid,\n",
     "        'epoch_number': epoch_number,\n",
     "        'best_validation_loss': best_validation_loss,\n",
     "        'best_validation_epoch': best_validation_epoch,\n",
+    "        'image_size': image_size,\n",
     "    }, \n",
     "    save_path\n",
     ")"
