--- a/lung-seg-demo.ipynb
+++ b/lung-seg-demo.ipynb
@@ -206,7 +206,7 @@
    "source": [
     "data_train, data_valid = monai.data.utils.partition_dataset_classes(\n",
     "    data,\n",
-    "    classes = list(map(lambda d : str(d['tuberculosis'])+d['source'], data)),\n",
+    "    classes = list(map(lambda d : (d['tuberculosis'],d['source']), data)),\n",
     "    ratios = (8,2)\n",
     ")"
    ]
@@ -257,6 +257,7 @@
     "    monai.transforms.ToTensorD(keys = ['img', 'seg']),\n",
     "])\n",
     "\n",
+    "# Transform for training\n",
     "transform_train = monai.transforms.Compose([\n",
     "    transform_valid,\n",
     "    RandBlobDropoutD(\n",
@@ -379,7 +380,7 @@
    "execution_count": null,
    "id": "cb9cc865",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -410,7 +411,7 @@
    "id": "c4c9f0e9",
    "metadata": {},
    "source": [
-    "# Defining Loss Functions"
+    "# Defining the Loss Function"
    ]
   },
   {
@@ -435,7 +436,7 @@
    "source": [
     "# Test drive\n",
     "data_item = dataset_train[42]\n",
-    "seg_pred = seg_net(data_item['img'].unsqueeze(0)) # shape is (1,3,1024,1024), which is (B,N,H,W)\n",
+    "seg_pred = seg_net(data_item['img'].unsqueeze(0)) # shape is (1,2,1024,1024), which is (B,N,H,W)\n",
     "\n",
     "dice_loss(\n",
     "    seg_net(data_item['img'].unsqueeze(0)), # input, one-hot\n",
@@ -562,7 +563,7 @@
    "execution_count": null,
    "id": "ed4c3c02",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -767,7 +768,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = '0023' # Set a new run ID each time\n",
+    "run_id = '0025' # Set a new run ID each time\n",
     "save_path = f'model{run_id}.pth'\n",
     "if (os.path.exists(save_path)):\n",
     "    del run_id, save_path\n",
