add mention of AMP

--- a/lung-seg-demo-extended.ipynb
+++ b/lung-seg-demo-extended.ipynb
@@ -8,9 +8,10 @@
     "This differs from lung-seg-demo in that some additional MONAI features are showcased. The following additonal features are shown here that are not in lung-seg-demo:\n",
     "- PersistentDataset (seen [here](#Preparing-Data-Lists))\n",
     "- Sliding window inference (seen [here](#Sliding-Window-Inference))\n",
-    "  - Also, a transfrom `RandomSpatialCropD` is introduced into the training, to help train the network on image patches. (See that [here](#Creating-Transforms).)\n",
+    "    - Also, a transfrom `RandomSpatialCropD` is introduced into the training, to help train the network on image patches. (See that [here](#Creating-Transforms).)\n",
     "- Metrics (dice metric, seen [here](#Defining-a-metric))\n",
     "- Engines and event handlers (seen in the alternative approach to training [here](#Engines-appraoch-to-training))\n",
+    "    - Also, automatic mixed precision (AMP) is seen here.\n",
     "\n",
     "# Table of Contents\n",
     "* [Montgomery and Shenzhen Datasets](#Montgomery-and-Shenzhen-Datasets)\n",
@@ -1193,13 +1194,31 @@
     "\n",
     "trainer = monai.engines.SupervisedTrainer(\n",
     "    device = device,\n",
-    "    max_epochs = 60,\n",
+    "    max_epochs = 10,\n",
     "    train_data_loader = dataloader_train,\n",
     "    network = seg_net,\n",
     "    optimizer = optimizer,\n",
     "    loss_function = dice_loss,\n",
-    "    train_handlers = [training_loss_collector, validation_handler, image_display_handler]\n",
+    "    train_handlers = [training_loss_collector, validation_handler, image_display_handler],\n",
+    "    amp=True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e2c7c5e",
+   "metadata": {},
+   "source": [
+    "Notice that [automatic mixed precision](https://docs.monai.io/en/stable/highlights.html#auto-mixed-precision-amp)\n",
+    "was enabled by simply setting `amp=True` in the engine parameters. This would have been more complicated with plain PyTorch (see [PyTorch docs on AMP](https://pytorch.org/docs/stable/notes/amp_examples.html), or [this MONAI tutorial](https://github.com/Project-MONAI/tutorials/blob/master/acceleration/automatic_mixed_precision.ipynb) that does AMP explicitly without using an engine)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "babf4304",
+   "metadata": {},
+   "source": [
+    "Now we can start training:"
    ]
   },
   {
@@ -1211,8 +1230,6 @@
    },
    "outputs": [],
    "source": [
-    "# Training\n",
-    "\n",
     "trainer.run()"
    ]
   },
