improve links for colab

--- a/lung-seg-demo-extended.ipynb
+++ b/lung-seg-demo-extended.ipynb
@@ -227,7 +227,7 @@
    "id": "b38fdead",
    "metadata": {},
    "source": [
-    "<a id='ct'></a>\n",
+    "<a name='ct'></a>\n",
     "# Creating Transforms\n",
     "\n",
     "MONAI has a large and powerful collection of transforms to draw upon. We use many of them here, and we also use some custom made transforms, which can be created easily by inheriting MONAI's transform classes.\n",
@@ -327,7 +327,7 @@
    "id": "7003fe28",
    "metadata": {},
    "source": [
-    "<a id='pd'></a>\n",
+    "<a name='pd'></a>\n",
     "# PersistentDatasets\n",
     "\n",
     "We take our lists of data items and our transforms and we make datasets out of them. *Persistent*Datasets will pre-run their transforms on some number of data items, for faster access of transformed data later on. Unlike *Cache*Datasets, PersistentDatasets will do their caching on disk rather than in RAM."
@@ -476,7 +476,7 @@
    "id": "8d282d12",
    "metadata": {},
    "source": [
-    "<a id='metric'></a>\n",
+    "<a name='metric'></a>\n",
     "# Defining a metric\n",
     "\n",
     "When evaluating a model, [metrics](https://docs.monai.io/en/stable/metrics.html) provide a little more functionality than plain functions or loss functions. Here we will use the [mean dice](https://docs.monai.io/en/stable/metrics.html#mean-dice) metric, which is\n",
@@ -969,7 +969,7 @@
    "id": "736b71dc",
    "metadata": {},
    "source": [
-    "<a id='swi'></a>\n",
+    "<a name='swi'></a>\n",
     "##  Sliding Window Inference\n",
     "\n",
     "*Sliding window inference* is a way to run our network on smaller pieces of an image, and then glue the outputs together into a full result. This might be preferred if there are memory constraints that prevent operating on an image all at once, which often happens when a model is deployed to a variety of environments that don't have the same computational resources that were available during training.\n",
@@ -1064,7 +1064,7 @@
    "id": "fd3c5e90",
    "metadata": {},
    "source": [
-    "<a id='engines'></a>\n",
+    "<a name='engines'></a>\n",
     "# Engines appraoch to training\n",
     "\n",
     "[Engines](https://docs.monai.io/en/stable/engines.html) and [event handlers](https://docs.monai.io/en/stable/handlers.html) are MONAI's window into the [PyTorch Ignite](https://pytorch.org/ignite/index.html) way of doing things. Instead of explicitly defining a `for` loop to do our training, we construct an ignite _engine_ called `trainer` below. Calling `trainer.run()` actually executes the training process. In this case the trainer is a MONAI `SupervisedTrainer`, which has a lot of sensible defaults for \"image and label\" style training.\n",
@@ -1188,10 +1188,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e370cf51",
+   "id": "02eb7ec0",
    "metadata": {},
    "source": [
-    "<a id='amp'></a>"
+    "<a name='amp'></a>"
    ]
   },
   {
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "688876ec",
+   "id": "2b976eec",
    "metadata": {},
    "source": [
     "Notice that [automatic mixed precision](https://docs.monai.io/en/stable/highlights.html#auto-mixed-precision-amp)\n",
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a27f9d8",
+   "id": "be0169df",
    "metadata": {},
    "source": [
     "Now we can start training:"
